# call-me-maybe

call-me-maybe/: Makefile  README.md  test.py
call-me-maybe/data/input/: functions_definition.json
call-me-maybe/data/output/: function_calling_results.json
call-me-maybe/src/: __init__.py  loader.py  models.py  utils.py
call-me-maybe/test/: decoding.py  main.py
new/: Makefile  README.md  pyproject.toml  test.py
new/data/output/: function_calling_results.json
new/llm_sdk/: __init__.py
new/src/: __init__.py  loader.py  models.py  utils.py
test/: .flake8  .gitignore  Makefile  README.md  mypy.ini  pyproject.toml
test/src/: __init__.py  constrained_decoder.py  loader.py  models.py  pipeline.py
