[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "pydantic>=2.12.5",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "huggingface-hub>=0.23.0",
]

[dependency-groups]
dev = [
    "flake8>=7.0.0",
]

[tool.flake8]
max-line-length = 110
exclude = [
    ".venv",
    "__pycache__",
]


