[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Introduction to function calling in LLMs using constrained decoding"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0",
    "pydantic>=2.0.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "huggingface-hub>=0.23.0",
    "flake8>=7.0.0",
    "mypy>=1.0.0",
]
